syntax = "proto3";
package pb;
option go_package = "internal/infra/grpc/pb";

message CreateOrderRequest {
  string id = 1;
  float price = 2;
  float tax = 3;
}

message CreateOrderResponse {
  string id = 1;
  float price = 2;
  float tax = 3;
  float final_price = 4;
}

message ListOrderRequest {
  int32 page = 1;
  int32 pageSize = 2;
}

message ItemListOrderResponse {
  string id = 1;
  float price = 2;
  float tax = 3;
  float final_price = 4;
}

message ListOrderResponse {
  repeated ItemListOrderResponse itemListOrderResponse = 1;
}

service OrderService {
  rpc CreateOrder(CreateOrderRequest) returns (CreateOrderResponse);
  rpc ListOrder(ListOrderRequest) returns (ListOrderResponse);
}